# PaddleOCRJni

./: .gitignore  CMakeLists.txt  README.md  build-default.bat  build-default.sh  build.bat  build.sh  generate-vs-project.bat  valgrind-massif.sh  valgrind-memcheck.sh
include/: args.h  ocr_lite_port.h  ocr_result.h  paddleocr.h  postprocess_op.h  version.h
src/: args.cpp  ocr_jni.cpp  ocr_result.cpp  paddleocr.cpp  postprocess_op.cpp  utility.cpp
